--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,99 @@
-async execute({ customerAccount }) {
-  const result = { fees: [] };
+import numberToCurrency from '../core/helpers/currency.js'
 
-  // Buscar dados estruturados e accounts
-  const { groupedFees, accounts } = await this.#getFeesStructuredFromSQL(customerAccount);
+export default class CustomerFees {
+  #feeName = 'Customer Fees'
+  #customer = {}
+  #accounts = []
+  #clientCurrent = []
+  constructor(fees, accounts) {
+    // global.logger.info('CustomerFees()')
 
-  // Passar `accounts` no lugar de `customerAccount`
-  const customer = new CustomerFees(groupedFees, accounts);
-  if (customer.fee) result.fees.push(customer.fee);
+    const feeTypes = accounts.reduce((acc, item) => {
+      if (item.feeType > 2) return acc
+      acc = item.feeType
+      return acc
+    }, 0)
 
-  const bank = new BankAccountFee(groupedFees, accounts);
-  if (bank.fee) result.fees.push(bank.fee);
+    this.#customer = fees.filter((x) => x.feeType === this.#feeName)[0]
 
-  const equityField = await Field.find({ code: 7 });
-  const investiment = new InvestimentAccountFee(
-    groupedFees,
-    accounts,
-    equityField[0]
-  );
-  if (investiment.fee?.feeGroups) result.fees.push(investiment.fee);
+    this.#customer.feeGroups.forEach((feeGroup) => {
+      feeGroup.fields = feeGroup.fields.filter((x) => x.code <= feeTypes)
+      feeGroup.fields?.forEach((item) => {
+        item.exceptionOptions = item.exceptionOptions.filter((x) => !x.retired)
+      })
+    })
 
-  const feesActives = await FeeCase.find({
-    cif: customerAccount[0].cifno,
-    status: {
-      $nin: ['DONE', 'REJECTED']
-    },
-    caseNumber: {
-      $exists: true
+    this.#accounts = accounts.filter(
+      (x) => x.feeGroup === this.#customer.feeGroups[0].code
+    )
+
+    this.#customer.feeGroups[0].kycMailingStatus =
+      accounts.find((account) => account.feeType === 2)?.kycMailingStatus ||
+      null
+    this.#customer.feeGroups[0].fields.forEach((field) => {
+      field.labelValue = numberToCurrency(field.defaultValue)
+    })
+
+    this.#clientCurrent = this.#customer.feeGroups[1].fields
+    this.#configureCustomer()
+
+    this.#customer.feeGroups[2].fields.forEach((field, fieldIndex) => {
+      field.labelValue =
+        this.#customer.feeGroups[1].fields[fieldIndex].labelValue
+      if (
+        field.code === 2 &&
+        this.#customer.feeGroups[0].kycMailingStatus !== 'Hold Mail'
+      ) {
+        field.defaultValue = field.labelValue
+        field.exceptionOptions = [
+          {
+            value: field.defaultValue,
+            text: field.defaultValue
+          }
+        ]
+      }
+    })
+  }
+
+  get fee() {
+    return this.#customer
+  }
+
+  #configureCustomer() {
+    // global.logger.info('configureCustomer()')
+
+    if (this.#accounts && this.#accounts.length < 1) {
+      this.#customer = {}
+      return
     }
-  });
 
-  result.feesActives = feesActives?.map((x) => ({
-    caseNumber: x.caseNumber,
-    id: x.id
-  }));
+    for (const field of this.#clientCurrent) {
+      for (const account of this.#accounts) {
+        if (field.isCurrentClient && field.code === account.feeType) {
+          if (
+            field.code === 2 &&
+            this.#customer.feeGroups[0].kycMailingStatus !== 'Hold Mail'
+          ) {
+            field.defaultValue = 'NOT APPLICABLE'
+            field.labelValue = field.defaultValue
+          } else {
+            field.defaultValue = account.feeAmount.toString()
+            field.labelValue = numberToCurrency(field.defaultValue)
+          }
+        }
+      }
+    }
 
-  result.documentUrl =
-    'https://minio-ui.dev.k8s.safra.int/api/v1/buckets/jarvis-public/objects/download?preview=true&prefix=U2NoZWR1bGVPZkZlZXMucGRm';
+    for (const feeGroup of this.#customer.feeGroups) {
+      feeGroup.cif = this.#accounts[0].cifno
+      feeGroup.accountNumber = this.#accounts[0].ddaNumber
+    }
 
-  return Result.ok(result);
+    this.#clearMemory()
+  }
+
+  #clearMemory() {
+    this.#accounts = []
+    this.#clientCurrent = []
+  }
 }
