--- a/.gitignore
+++ b/.gitignore
@@ -1,73 +1,160 @@
-async execute({ customerAccount }) {
-  const result = { fees: [] };
-
-  // Buscar e estruturar os dados do SQL
-  const fees = await this.#getFeesStructuredFromSQL(customerAccount);
-
-  // Buscar exceções via SQL
-  const exceptions = await this.#getExceptionFeesFromSQL(2); // Exemplo de FeePackageId
-  console.log('Exceptions from SQL:', exceptions);
-
-  const customer = new CustomerFees(fees, customerAccount);
-  if (customer.fee) result.fees.push(customer.fee);
-
-  const bank = new BankAccountFee(fees, customerAccount);
-  if (bank.fee) result.fees.push(bank.fee);
-
-  const investiment = new InvestimentAccountFee(fees, customerAccount, exceptions);
-  if (investiment.fee?.feeGroups) result.fees.push(investiment.fee);
-
-  result.feesActives = [];
-  result.documentUrl =
-    'https://minio-ui.dev.k8s.safra.int/api/v1/buckets/jarvis-public/objects/download?preview=true&prefix=U2NoZWR1bGVPZkZlZXMucGRm';
-
-  return Result.ok(result);
-}
-
-
-
-
-async #getExceptionFeesFromSQL(feePackageId) {
-  const connection = await connectToFeeMgmtDb();
-  const data = await executeStoreProcedure(
-    connection,
-    'sp_get_exception_fees_bypackage',
-    { feePackageId }
-  );
-
-  // Mapear os dados em um formato consistente
-  return data.map((exception) => ({
-    code: deParaFeeCodes[exception.FeeCode] || exception.FeeCode,
-    name: exception.FeeDescription,
-    defaultValue: exception.Amount?.toString() || '0',
-    tooltip: exception.FreqDescription || '',
-    isException: true
-  }));
-}
-
-
+import { FeeGroup } from './entities/FeeGroups.js'
+import numberToCurrency from '../core/helpers/currency.js'
 
 export default class InvestimentAccountFee {
-  #feeName = 'Investment Account Fees';
-  #investment = {};
-  constructor(fees, accounts, exceptions) {
-    this.#investment = fees.filter((x) => x.feeType === this.#feeName)[0];
+  #feeName = 'Investment Account Fees'
+  #investiment = {}
+  #accounts = []
+  #accountsDDA = []
+  #allExceptions = new Set()
+  constructor(fees, accounts, equityField) {
+    this.#investiment = fees.filter((x) => x.feeType === this.#feeName)[0]
+    const feeGroupCode = this.#investiment.feeGroups[0].code
 
-    if (!this.#investment || !Array.isArray(this.#investment.feeGroups)) {
-      throw new Error('Investment Account Fees or feeGroups are undefined');
+    this.#accounts = accounts.filter(
+      (x) => x.feeGroup === this.#investiment.feeGroups[0].code
+    )
+
+    if (this.#accounts && this.#accounts.length < 1) {
+      this.#investiment = {}
+      return
     }
 
-    // Adicionar exceções ao grupo de fees
-    const exceptionGroup = {
-      name: 'Exceptions',
-      code: 3,
-      fields: exceptions || []
-    };
+    this.#accountsDDA = new Set(
+      accounts
+        .filter((x) => x.feeGroup === feeGroupCode && x.bpsFeeTypeCode !== 'O')
+        .map((x) => ({
+          number: x.bpsAcctNumber,
+          code: x.feeType,
+          entity: x.entity
+        }))
+    )
 
-    this.#investment.feeGroups.push(exceptionGroup);
+    this.#addMultiplesAccount(this.#accounts[0].cifno)
+    this.#addCurrentClientValue(equityField)
   }
 
   get fee() {
-    return this.#investment;
+    return this.#investiment
+  }
+
+  #addMultiplesAccount(cif) {
+    const result = {}
+
+    for (const feeGroup of this.#investiment.feeGroups) {
+      for (const account of this.#accountsDDA) {
+        if (!result[account.number]) {
+          result[account.number] = {}
+        }
+
+        const fields = feeGroup.fields.filter((x) => x.code === account.code)
+
+        if (fields.length === 0) continue
+
+        if (!result[account.number][feeGroup.name]) {
+          result[account.number][feeGroup.name] = []
+
+          feeGroup.fields?.forEach((item) => {
+            item.exceptionOptions.forEach(
+              this.#allExceptions.add,
+              this.#allExceptions
+            )
+            item.exceptionOptions = item.exceptionOptions.filter(
+              (x) => !x.retired
+            )
+          })
+
+          const newFeeGroup = new FeeGroup({
+            name: feeGroup.name,
+            fields,
+            cif,
+            accountNumber: account.number,
+            visible: feeGroup.visible,
+            code: feeGroup.code,
+            entityCode: account.entity
+          })
+          result[account.number][feeGroup.name].push(newFeeGroup)
+          continue
+        }
+
+        const feeGroupToAddFields = result[account.number][feeGroup.name][0]
+        feeGroupToAddFields.fields = [...feeGroupToAddFields.fields, ...fields]
+      }
+    }
+
+    const feeGroupsByAccount = Object.keys(result).reduce((acc, item) => {
+      Object.keys(result[item]).forEach((element) => {
+        acc.push(result[item][element])
+      })
+      return acc
+    }, [])
+    this.#investiment.feeGroups = []
+    for (const feeGroups of feeGroupsByAccount) {
+      for (const feeGroup of feeGroups) {
+        this.#investiment.feeGroups.push(feeGroup)
+      }
+    }
+  }
+
+  #addCurrentClientValue(equityField) {
+    const exceptionsOptions = Array.from(this.#allExceptions)
+    for (const [
+      feeGroupIndex,
+      feeGroup
+    ] of this.#investiment.feeGroups.entries()) {
+      feeGroup.cif = this.#accounts[0].cifno
+      for (const [fieldIndex, field] of feeGroup.fields.entries()) {
+        if (field.isException) {
+          field.labelValue =
+            this.#investiment.feeGroups[feeGroupIndex - 1].fields[
+              fieldIndex
+            ].labelValue
+        } else {
+          for (const account of this.#accounts) {
+            if (
+              field.code === account.feeType &&
+              feeGroup.accountNumber === account.bpsAcctNumber
+            ) {
+              if (field.code === 5) {
+                field.defaultValue = field.isStandard
+                  ? field.defaultValue
+                  : account.feeAmount.toString()
+                field.labelValue = numberToCurrency(field.defaultValue)
+              } else {
+                if (field.labelValue !== 'Other') {
+                  if (field.isCurrentClient) {
+                    field.defaultValue = account.feeCode.toString()
+                  }
+
+                  let exception = exceptionsOptions.find(
+                    (x) => x.value === field.defaultValue
+                  )
+
+                  if (!exception) {
+                    exception = equityField.exceptionOptions.filter(
+                      (e) => e.value === field.defaultValue
+                    )[0]
+
+                    if (!exception) {
+                      exception = { text: '' }
+                    }
+                  }
+
+                  field.labelValue = exception.text
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    this.#clearMemory()
+  }
+
+  #clearMemory() {
+    this.#accounts = []
+    this.#accountsDDA = []
+    this.#allExceptions = new Set()
   }
 }
